src/tests/string_infix_boolean_expression/snapshots/monkey_interpreter__tests__string_infix_boolean_expression__test_string_infix_boolean_expression_case_2_lexical_analysis.snap
---
source: src/tests/string_infix_boolean_expression/mod.rs
assertion_line: 27
expression: tokens
---
[
    PositionedToken {
        token: String {
            literal: "this is a string",
        },
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: Equals,
        position: Position {
            line: 1,
            column: 20,
        },
    },
    PositionedToken {
        token: String {
            literal: "this is a string",
        },
        position: Position {
            line: 1,
            column: 23,
        },
    },
]
