src/tests/string_infix_boolean_expression/snapshots/monkey_interpreter__tests__string_infix_boolean_expression__test_string_infix_boolean_expression_case_2_syntax_analysis.snap
---
source: src/tests/string_infix_boolean_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: Infix {
            left_hand: String {
                literal: "this is a string",
            },
            operator: Equals,
            right_hand: String {
                literal: "this is a string",
            },
        },
    },
]
