src/tests/string_infix_boolean_expression/snapshots/monkey_interpreter__tests__string_infix_boolean_expression__test_string_infix_boolean_expression_case_5_lexical_analysis.snap
---
source: src/tests/string_infix_boolean_expression/mod.rs
assertion_line: 27
expression: tokens
---
[
    PositionedToken {
        token: String {
            literal: "string123",
        },
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: NotEquals,
        position: Position {
            line: 1,
            column: 13,
        },
    },
    PositionedToken {
        token: String {
            literal: "string123",
        },
        position: Position {
            line: 1,
            column: 16,
        },
    },
]
