src/tests/string_infix_boolean_expression/snapshots/monkey_interpreter__tests__string_infix_boolean_expression__test_string_infix_boolean_expression_case_6_environment.snap
---
source: src/tests/string_infix_boolean_expression/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        variables: {},
        sub_environment: None,
    },
}
